# scrapper-leyes

./: .dockerignore  .env.backup.example  .env.example  .gitignore  Dockerfile  Dockerfile.agent  README.md  deep_agent.py  docker-compose.yml  pyproject.toml  reparse.py  reset.py  test_db.py
docs/: PLAN_INTEGRACION_FUENTES.md  PLAN_MAPEO_COMPLETO.md  SPIKE_FUENTES.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
scripts/: README.md  backup_to_wasabi.sh  build_hierarchy.py  cloak_scraper.py  daily_update.sh  eva_sweep.py  extract_reranker_pairs.py
src/scrapper_leyes/: __init__.py  __main__.py  chunking.py  cli.py  config.py  embeddings.py  export_neo4j.py  (+13 more)
tests/: conftest.py  test_api.py  test_banco_republica_discoverer.py  test_can_discoverer.py  test_canonical_id.py  test_chunking.py  test_citation_parsing.py  test_cne_discoverer.py  test_corteidh_discoverer.py  test_decision_edges.py  test_diario_oficial_discoverer.py  test_embeddings.py  test_eva_discoverer.py  test_gaceta_congreso_discoverer.py  test_integration.py  test_jep_discoverer.py  test_legal_mapper_ner.py  test_multisource.py  test_normograma_discoverer.py  test_organos_control_discoverer.py  test_parser.py  test_regimen_bogota_discoverer.py  test_scraper_concurrency.py  test_sentencia_decision.py  test_sentencia_sections.py  test_sources_registry.py  test_superintendencias_discoverer.py  test_taxonomia.py  test_tools_mcp.py  test_tratados_source.py  test_verify_and_retry.py  test_vigencia.py  test_webrelatoria_discoverer.py
(+201 files in other folders)
