[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrapper-leyes"
version = "1.0.0"
description = "Pipeline de ingesta normativa colombiana: catálogo Socrata + scraper SUIN-Juriscol + Dashboard Legal IA"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "rich>=13.0",
    "click>=8.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "neo4j>=5.0",
    "qdrant-client>=1.12",
    "fastembed>=0.4",
]

[project.scripts]
scrapper-leyes = "scrapper_leyes.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
# Sentencia ingestion (HTML/PDF → Markdown). Heavy (pulls torch); optional.
ingest = [
    "docling>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scrapper_leyes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit the network (deselect with '-m not integration')",
]
